syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "StrongChallengeAvatar.proto";

message EnterStrongChallengeActivityStageCsReq {
	repeated StrongChallengeAvatar avatar_list = 1;
	uint32 stage_id = 4;
	repeated uint32 buff_list = 5;
}

