syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "AvatarType.proto";

message FeverTimeAvatar {
	AvatarType avatar_type = 1;
	uint32 id = 2;
}

