syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

message MarkChestInfo {
    uint32 config_id = 5;
    uint32 group_id = 3;
    uint32 floor_id = 15;
    uint32 plane_id = 10;
}