syntax = "proto3";              
//Fenni

option java_package = "emu.lunarcore.proto";

message TakePromotionRewardCsReq {
	uint32 promotion = 14;
	uint32 base_avatar_id = 1;
}
